# dash-prism

./: .gitignore  .prettierrc  CALLABLE_LAYOUT_SOLUTION.md  MANIFEST.in  README.md  eslint.config.mjs  justfile  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  tailwind.config.mjs  tsconfig.json  usage.py  vitest.config.ts  webpack.config.js
.github/workflows/: ci.yml  codeql.yml  docs-build.yml  docs-deploy-pages.yml  docs-deploy-vps.yml  docs-deploy.yml  docs.yml  publish.yml  python-publish.yml  vps-deploy.yml
dash_prism/: Action.py  Prism.py  PrismActionComponent.py  PrismComponent.py  PrismContentComponent.py  __init__.py  _imports_.py  dash_prism.js  dash_prism.js.LICENSE.txt  icons.py  init.py  metadata.json  package-info.json  proptypes.js  registry.py  utils.py
docs/: Makefile  THOROUGH_PRISM_REVIEW.md  api.rst  conf.py  contributing.rst  getting-started.rst  index.rst  user-guide.rst
src/: icons.json
src/ts/: global.css  global.d.ts  index.ts
src/ts/components/: ErrorBoundary.tsx  Panel.tsx  PanelDropzone.tsx  PrismActionComponent.tsx  PrismComponent.tsx  PrismContentComponent.tsx  SearchBar.tsx  StatusBar.tsx  TabBar.tsx  WorkspaceView.tsx
src/ts/components/SearchBar/: DisplayMode.tsx  OptionsMode.tsx  ParamsMode.tsx  SearchBar.tsx  SearchMode.tsx  searchBarReducer.test.ts  searchBarReducer.ts  searchBarUtils.ts  useDropdownResize.ts  useSearchBarState.ts
src/ts/components/layouts/: ErrorLayout.tsx  NewLayout.tsx  index.ts
src/ts/components/modals/: HelpModal.tsx  InfoModal.tsx  SetIconModal.tsx  index.ts
src/ts/components/ui/: button.tsx  card.tsx  command.tsx  context-menu.tsx  dialog.tsx  index.ts  input.tsx  label.tsx  popover.tsx  separator.tsx  spinner.tsx  tabs.tsx  toaster.tsx  toggle.tsx  tooltip.tsx
src/ts/constants/: tab-icons.ts  tab-styles.ts
src/ts/context/: ConfigContext.tsx  DndProvider.tsx  PortalContext.tsx  PrismContext.tsx  prismReducer.test.ts  prismReducer.ts
src/ts/hooks/: useDashSync.ts  useKeyboardShortcuts.ts  usePanels.ts  usePrism.ts  useShareLinks.ts  useTabs.ts
src/ts/store/: hooks.ts  index.ts  persistenceKeys.test.ts  selectors.ts  types.ts  uiSlice.test.ts  uiSlice.ts  workspaceSlice.test.ts  workspaceSlice.ts
src/ts/types/: index.ts
src/ts/utils/: cn.ts  logger.ts  notifications.ts  panels.ts  tabs.ts  toastEmitter.test.ts  toastEmitter.ts  uuid.ts  workspace.ts
tests/: conftest.py  test_components.py  test_init.py  test_registry.py  test_utils.py
tests/integration/: conftest.py  test_async_app.py  test_callable_layout.py  test_callback_layouts.py  test_context_menu.py  test_dnd_basic.py  test_dnd_complex.py  test_dnd_edge_cases.py  test_dnd_panel_split.py  test_dnd_tab_reorder.py  test_initial_layout.py  test_keyboard_shortcuts.py  test_layout_loading.py  test_panel_operations.py  test_portal_refresh.py  test_prism_actions.py  test_searchbar.py  test_searchbar_selection.py  test_size_variants.py  test_split_button.py  test_tab_lifecycle.py  test_tab_rename.py  test_workspace_persistence.py  testutils.py
(+3 files in other folders)
